--- a/index.html
+++ b/index.html
@@ -23,21 +23,25 @@
       to ensure that your project is successful
     </p>
   </header>
-  <section>
-    <h3>Supervisor</h3>
-    <p>Monitors activity to identify project roadblocks</p>
+  <section class="card card-supervisor">
+    <h3 class="card-heading">Supervisor</h3>
+    <p class="card-text">Monitors activity to identify project roadblocks</p>
+    <img class="icon" src="./images/icon-supervisor.svg" alt="supervisor icon">
   </section>
-  <section>
-    <h3>Team Builder</h3>
-    <p>Scans our talent network to create the optimal team for your project</p>
+  <section class="card card-team">
+    <h3 class="card-heading">Team Builder</h3>
+    <p class="card-text">Scans our talent network to create the optimal team for your project</p>
+    <img class="icon" src="./images/icon-team-builder.svg" alt="team-builder icon">
   </section>
-  <section>
-    <h3>Karma</h3>
-    <p>Regularly evaluates our talent to ensure quality</p>
+  <section class="card card-karma">
+    <h3 class="card-heading">Karma</h3>
+    <p class="card-text">Regularly evaluates our talent to ensure quality</p>
+    <img class="icon" src="./images/icon-karma.svg" alt="karma icon">
   </section>
-  <section>
-    <h3>Calculator</h3>
-    <p>Uses data from past projects to provide better delivery estimates</p>
+  <section class="card card-calculator">
+    <h3 class="card-heading">Calculator</h3>
+    <p class="card-text">Uses data from past projects to provide better delivery estimates</p>
+    <img class="icon" src="./images/icon-calculator.svg" alt="calculator icon">
   </section>
   <footer>
     <p class="attribution">
